# custom-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CopyVendorOutput.cmake  SetVendorOutput.cmake  Tools.cmake
custom_engine/: CMakeLists.txt  pch.hpp
custom_engine/include/custom_engine/: cengine.hpp  cengine_entry_point.hpp
custom_engine/platform/windows/: macro.hpp
custom_engine/src/core/: application.cpp  application.hpp  assert.hpp  engine_entry_point.hpp  log.cpp  log.hpp  window.cpp  window.hpp
custom_engine/src/data/: constants.hpp
custom_engine/src/lib/: glfw.cpp  glfw.hpp  opengl.cpp  opengl.hpp
custom_engine/src/renderer/: camera.hpp  editor_camera.cpp  editor_camera.hpp  framebuffer.cpp  framebuffer.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  uniform_buffer.cpp  uniform_buffer.hpp
custom_engine/src/scene/: entity.cpp  entity.hpp  fly_camera.cpp  fly_camera.hpp  scene.cpp  scene.hpp
custom_engine/src/utils/: singleton.hpp
sandbox/: CMakeLists.txt  main.cpp  sandbox.cpp
sandbox/res/shaders/: gl_basic_lighting.vert
sandbox/src/: basic_light_scene.cpp  basic_light_scene.hpp
sandbox/src/basic_light_scene/: basic_light_scene.cpp  basic_light_scene.hpp  sponza_entity.cpp  sponza_entity.hpp
sandbox/src/data/: constants.hpp
src/: CMakeLists.txt  pch.hpp
src/custom_engine/: math.cpp  math.hpp
src/custom_engine/macro/: macro.hpp
src/include/custom_engine/: cengine.hpp
